# learning_rust_by_avoiding_common_pitfalls

./: README.md
ch01/dangling_danger_cpp/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
ch01/dangling_danger_cpp/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
ch01/dangling_danger_cpp/source/: lib.cpp  main.cpp
ch01/dangling_danger_cpp/test/: CMakeLists.txt
ch01/dangling_danger_cpp/test/source/: dangling_danger_cpp_test.cpp
ch01/dangling_danger_rust/: Cargo.toml
ch01/dangling_danger_rust/src/: main.rs
ch01/gc_lag_java/: settings.gradle.kts
